<resources>
    <string name="app_name">HearMe</string>
    <string name="ok">OK</string>
    <string name="share">Compartilhe</string>
    <string name="rate">Avalie-nos</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click "Read Barcode" to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="testa">Empresa realiza teste em animais!</string>
    <string name="nao_testa">Empresa não realiza testes em animais!</string>
    <string name="ler_cod">Ler Codigo de Barra</string>
    <string name="emp_t">Empresas que Testam</string>
    <string name="emp_nt">Empresas que Não Testam</string>
    <string name="info">Informações</string>
    <!--list-->
    <string name="nao_encontrada">Nenhuma empresa encontrada!</string>
    <string name="nao_encontrada2">Empresa não encontrada!</string>
    <string name="pesquisa_hint">Pesquisar nome</string>
    <string name="reco">Recomendo esse app</string>
    <!--about-->
    <string name="about">Nosso app foi feito para ajudar as pessoas a pensarem antes
    de comprar. Pesquise empresas nas listas ou através do código de barra de algum
    produto e descubra se ela realiza testes ou não.</string>
    <string name="frase">"Você sabia que mais de 100 milhões de animais são aprisionados
        pelas industrias que fazem testes e que já existe tecnologia suficiente para que
        não precisem utilizar animais?"</string>
    <string name="dados">As listas e os dados do HearMe são retirados das ongs: PETA, ANDA etc
   das paginas www.luizamell.com e belezavegan.blogspot.com.br</string>
    <string name="creditos">Creditos</string>
    <string name="creditos_titulo">Icones por:</string>
    <!-- Icon made by [author link] from www.flaticon.com  -->
    <string name="creditos_link1"><a href="http://www.flaticon.com/authors/freepik">Freepik</a></string>
    <string name="creditos_link2"><a href="http://www.flaticon.com/authors/madebyoliver">Madebyoliver</a></string>
    <string name="creditos_link3"><a href="http://www.flaticon.com/authors/roundicons">Roundicons</a></string>
    <string name="desite">Em: www.flaticon.com</string>
    <string name="licensa_cm">Licenciados por <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></string>
</resources>
