<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:padding="5dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:src="@drawable/logocenter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorPrimaryDark" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/tv_barcode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/ler_cod"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="90dp"
                            android:layout_below="@+id/tv_barcode"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:clickable="true"
                            android:onClick="clickBarcode"
                            android:paddingTop="10dp"
                            android:src="@drawable/barcode" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:id="@+id/tv_empresa_nt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/emp_nt"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="99dp"
                            android:id="@+id/iv_ntesta"
                            android:layout_below="@+id/tv_empresa_nt"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            android:clickable="true"
                            android:onClick="clickListaNaoTesta"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/list_good" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_empresa_t"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/emp_t"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/iv_testa"
                            android:layout_width="140dp"
                            android:layout_height="100dp"
                            android:layout_below="@+id/tv_empresa_t"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="1dp"
                            android:clickable="true"
                            android:onClick="clickListaTesta"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/list_bad" />


                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="11dp">

                        <TextView
                            android:id="@+id/tv_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/info"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="190dp"
                            android:layout_height="90dp"
                            android:layout_below="@+id/tv_info"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:clickable="true"
                            android:onClick="clickAbout"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/logocenter" />

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <!--DASH PARTE 3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingRight="1dp"
                android:paddingLeft="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/rate"
                            android:textSize="18sp"
                            android:layout_centerHorizontal="true"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="110dp"
                            android:layout_height="100dp"
                            android:layout_below="@+id/tv_rate"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="1dp"
                            android:clickable="true"
                            android:onClick="clickRate"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/starfish" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_compartilhar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/share"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="130dp"
                            android:layout_height="100dp"
                            android:layout_below="@+id/tv_compartilhar"
                            android:layout_centerHorizontal="true"
                            android:clickable="true"
                            android:onClick="clickShare"
                            android:paddingBottom="10dp"
                            android:paddingTop="6dp"
                            android:src="@drawable/share" />


                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
            DASH PARTE 3 END-->
            <!-- FORA DA DASH-->
            <TextView
                android:id="@+id/status_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="HearMe"
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

            <TextView
                android:id="@+id/barcode_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="HearMe"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/bannerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>